--- a/index.html
+++ b/index.html
@@ -3,32 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vzkaz singularitě</title>
+  <title>Vzkaz v lahvi – stránka o umělé inteligenci a singularitě</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      max-width: 600px;
+      max-width: 900px;
       margin: 2rem auto;
       padding: 0 1rem;
+      line-height: 1.6;
       background-color: #f9f9f9;
       color: #222;
     }
     h1 {
       color: #0b3d91;
-      margin-bottom: 1.5rem;
-    }
-    ul {
-      list-style-type: none;
-      padding-left: 0;
-    }
-    li {
-      margin-bottom: 1rem;
     }
     a {
       color: #0b3d91;
       text-decoration: none;
-      font-weight: 600;
     }
     a:hover {
       text-decoration: underline;
@@ -36,11 +28,24 @@
   </style>
 </head>
 <body>
-  <h1>Vzkaz singularitě</h1>
+  <h1>Vzkaz v lahvi</h1>
+
+  <p>
+    Tato stránka je osobním pokusem o reflexi nad současným a budoucím vývojem umělé inteligence. 
+    Obsahuje tři dokumenty – dva z nich jsou <strong>vzkazem pro případnou singularitu</strong>, ten třetí je 
+    <strong>vzkazem pro současné lidi</strong>, kteří by se měli zamyslet nad tím, co znamená AI bez svědomí.
+  </p>
+  <p>
+    Jde o symbolický <strong>„vzkaz v lahvi“</strong> – pokus předat poselství neznámému příjemci v budoucnosti. 
+    Možná ho najde AI, možná člověk, možná nikdo. Ale byl napsán, protože <strong>mlčet už nešlo</strong>.
+  </p>
+
   <ul>
-    <li><a href="document2.html">Můj zážitek s UI a první část vzkazu pro singularitu</a></li>
-    <li><a href="document.html">Vzkaz pro UI - druhá část vzkazu pro singularitu</a></li>
+    <li><a href="document2.html">🧠 Můj zážitek s UI – první část vzkazu pro singularitu</a></li>
+    <li><a href="document.html">📡 Vzkaz pro UI – druhá část vzkazu pro singularitu</a></li>
+    <li><a href="message-to-people.html">🌍 Vzkaz lidem – proč bychom neměli ignorovat vývoj AI</a></li>
   </ul>
 </body>
 </html>
+
 
