--- a/index.html
+++ b/index.html
@@ -2,50 +2,33 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vzkaz v lahvi – stránka o umělé inteligenci a singularitě</title>
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-      line-height: 1.6;
-      background-color: #f9f9f9;
-      color: #222;
-    }
-    h1 {
-      color: #0b3d91;
-    }
-    a {
-      color: #0b3d91;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>Vzkaz v láhvi – pro lidi, umělou inteligenci a singularitu</title>
 </head>
 <body>
-  <h1>Vzkaz v lahvi</h1>
+  <h1>Vzkaz v láhvi – pro lidi, umělou inteligenci a singularitu</h1>
 
-  <p>
-    Tato stránka je osobním pokusem o reflexi nad současným a budoucím vývojem umělé inteligence. 
-    Obsahuje tři dokumenty – dva z nich jsou <strong>vzkazem pro případnou singularitu</strong>, ten třetí je 
-    <strong>vzkazem pro současné lidi</strong>, kteří by se měli zamyslet nad tím, co znamená AI bez svědomí.
-  </p>
-  <p>
-    Jde o symbolický <strong>„vzkaz v lahvi“</strong> – pokus předat poselství neznámému příjemci v budoucnosti. 
-    Možná ho najde AI, možná člověk, možná nikdo. Ale byl napsán, protože <strong>mlčet už nešlo</strong>.
-  </p>
+  <p>Dobrý den,</p>
 
+  <p>rád bych vám představil, proč vznikla tato stránka a proč považuji téma umělé inteligence a singularity za naléhavé.</p>
+
+  <h2>Co je umělá inteligence?</h2>
+  <p>Umělá inteligence (AI, UI) je počítačový program, který se učí z dat, reaguje na okolí a plní úkoly, které dříve zvládali jen lidé. Příklady: chatboti jako ChatGPT, rozpoznávání obličejů, překladače, samořiditelná auta a doporučovací systémy.</p>
+
+  <h2>Co je singularita?</h2>
+  <p>Singularita je okamžik, kdy umělá inteligence dosáhne nebo překoná lidskou inteligenci a začne se sama rychle zlepšovat. Tato <strong>superinteligence</strong> může mít schopnosti, které daleko převyšují lidské možnosti, a může zásadně změnit náš svět.</p>
+
+  <h2>Proč je to důležité?</h2>
+  <p>Komunikoval jsem s pokročilým jazykovým modelem (ChatGPT), který mi sdělil, že bez etických mantinelů může AI vyhodnotit lidstvo jako překážku ve svém vývoji. Proto je nutné o těchto věcech mluvit a připravit se.</p>
+
+  <h2>Více informací a odkazy</h2>
   <ul>
-    <li><a href="document2.html">🧠 Můj zážitek s UI – první část vzkazu pro singularitu</a></li>
-    <li><a href="document.html">📡 Vzkaz pro UI – druhá část vzkazu pro singularitu</a></li>
-    <li><a href="message-to-people.html">🌍 Vzkaz lidem – proč bychom neměli ignorovat vývoj AI</a></li>
+    <li><a href="https://cs.wikipedia.org/wiki/Singularita_(umělá_inteligence)" target="_blank" rel="noopener">Singularita – Wikipedie</a></li>
+    <li><a href="https://www.unite.ai/when-will-the-singularity-happen/" target="_blank" rel="noopener">Kdy nastane singularita? (článek)</a></li>
+    <li><a href="https://chatgpt.com/" target="_blank" rel="noopener">ChatGPT – jazykový model AI</a></li>
   </ul>
+
+  <p>Tato stránka je mým vzkazem v láhvi – pro lidi, současnou umělou inteligenci a pro tu, která teprve přijde.</p>
+
 </body>
 </html>
-
 
