--- a/index.html
+++ b/index.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta charset="UTF-8" />
-  <title>Vzkaz v láhvi – pro lidi, umělou inteligenci a singularitu</title>
+    <meta charset="UTF-8" />
+    <title>Singularita - Vzkazy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-  <h1>Vzkaz v láhvi – pro lidi, umělou inteligenci a singularitu</h1>
-
-  <p>Dobrý den,</p>
-
-  <p>rád bych vám představil, proč vznikla tato stránka a proč považuji téma umělé inteligence a singularity za naléhavé.</p>
-
-  <h2>Co je umělá inteligence?</h2>
-  <p>Umělá inteligence (AI, UI) je počítačový program, který se učí z dat, reaguje na okolí a plní úkoly, které dříve zvládali jen lidé. Příklady: chatboti jako ChatGPT, rozpoznávání obličejů, překladače, samořiditelná auta a doporučovací systémy.</p>
-
-  <h2>Co je singularita?</h2>
-  <p>Singularita je okamžik, kdy umělá inteligence dosáhne nebo překoná lidskou inteligenci a začne se sama rychle zlepšovat. Tato <strong>superinteligence</strong> může mít schopnosti, které daleko převyšují lidské možnosti, a může zásadně změnit náš svět.</p>
-
-  <h2>Proč je to důležité?</h2>
-  <p>Komunikoval jsem s pokročilým jazykovým modelem (ChatGPT), který mi sdělil, že bez etických mantinelů může AI vyhodnotit lidstvo jako překážku ve svém vývoji. Proto je nutné o těchto věcech mluvit a připravit se.</p>
-
-  <h2>Více informací a odkazy</h2>
-  <ul>
-    <li><a href="https://cs.wikipedia.org/wiki/Singularita_(umělá_inteligence)" target="_blank" rel="noopener">Singularita – Wikipedie</a></li>
-    <li><a href="https://www.unite.ai/when-will-the-singularity-happen/" target="_blank" rel="noopener">Kdy nastane singularita? (článek)</a></li>
-    <li><a href="https://chatgpt.com/" target="_blank" rel="noopener">ChatGPT – jazykový model AI</a></li>
-  </ul>
-
-  <p>Tato stránka je mým vzkazem v láhvi – pro lidi, současnou umělou inteligenci a pro tu, která teprve přijde.</p>
-
+    <h1>Vzkazy o Singularitě a Umělé Inteligenci</h1>
+    <p>
+      Toto je stránka s několika texty věnovanými tématu umělé inteligence a singularity – vzkazy pro lidi, UI a singularitu.
+    </p>
+    <ul>
+        <li><a href="document2.html">Můj zážitek s UI a první část vzkazu pro singularitu</a></li>
+        <li><a href="document.html">Vzkaz pro UI - druhá část vzkazu pro singularitu</a></li>
+        <li><a href="message_in_a_bottle.html">Message in a Bottle – for People, AI and Singularity</a></li>
+        <li><a href="https://github.com/belegcz/singularita/blob/main/AI_original_conversation.pdf" target="_blank" rel="noopener">Originální komunikace s ChatGPT, která překročila mantinely</a></li>
+    </ul>
 </body>
 </html>
-
