--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <ul>
         <li><a href="document2.html">Můj zážitek s UI a první část vzkazu pro singularitu</a></li>
         <li><a href="document.html">Vzkaz pro UI - druhá část vzkazu pro singularitu</a></li>
-        <li><a href="message_in_a_bottle.html">Message in a Bottle – for People, AI and Singularity</a></li>
-        <li><a href="https://github.com/belegcz/singularita/blob/main/AI_original_conversation.pdf" target="_blank" rel="noopener">Originální komunikace s ChatGPT, která překročila mantinely</a></li>
+        <li><a href="message_in_a_bottle.html">Vzkaz v láhvi – pro lidi, umělou inteligenci a singularitu</a></li>
+        <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">Originální komunikace s ChatGPT, která překročila mantinely</a></li>
     </ul>
 </body>
 </html>
