--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       Toto je stránka s několika texty věnovanými tématu umělé inteligence a singularity – vzkazy pro lidi, UI a singularitu.
     </p>
     <ul>
+        <li><a href="message_in_a_bottle.html">Proč vznikl tento projekt?</a></li>
         <li><a href="document2.html">Můj zážitek s UI a první část vzkazu pro singularitu</a></li>
         <li><a href="document.html">Vzkaz pro UI - druhá část vzkazu pro singularitu</a></li>
-        <li><a href="message_in_a_bottle.html">Vzkaz v láhvi – pro lidi, umělou inteligenci a singularitu</a></li>
+        
         <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">Originální komunikace s ChatGPT, která překročila mantinely</a></li>
     </ul>
 </body>
