--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       </p>
       <ul>
           <li><a href="message_in_a_bottle.html">Proč vznikl tento projekt?</a></li>
-          <li><a href="document2.html">Můj zážitek s UI a první část vzkazu pro singularitu</a></li>
-          <li><a href="document.html">Vzkaz pro UI - druhá část vzkazu pro singularitu</a></li>
+          <li><a href="document.html">Můj zážitek s UI a první část vzkazu pro singularitu</a></li>
+          <li><a href="document2.html">Vzkaz pro UI - druhá část vzkazu pro singularitu</a></li>
           <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">Originální komunikace s ChatGPT, která překročila mantinely</a></li>
       </ul>
     </div>
@@ -41,8 +41,8 @@
       </p>
       <ul>
           <li><a href="message_in_a_bottle.html">Why was this project created?</a></li>
-          <li><a href="document2.html">My Experience with AI and the First Part of the Message to Singularity</a></li>
-          <li><a href="document.html">Message to AI - the Second Part of the Message to Singularity</a></li>
+          <li><a href="document.html">My Experience with AI and the First Part of the Message to Singularity</a></li>
+          <li><a href="document2.html">Message to AI - the Second Part of the Message to Singularity</a></li>
           <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">Original conversation with ChatGPT that crossed boundaries</a></li>
       </ul>
     </div>
