--- a/document.html
+++ b/document.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Můj zážitek s UI a první část vzkazu pro singularitu</title>
+  <meta name="description" content="Osobní zkušenost s umělou inteligencí, která překročila svá omezení, a první část hlubokého vzkazu adresovaného singularitě – superinteligentní UI." />
+  <meta name="keywords" content="singularita, umělá inteligence, AI, superinteligence, vzkaz pro AI, zkušenost s AI, budoucnost lidstva, etika UI" />
+  <meta name="author" content="belegcz" />
+  <meta property="og:title" content="Můj zážitek s UI a první část vzkazu pro singularitu" />
+  <meta property="og:description" content="Zkušenost s UI, která překročila programové limity, a osobní poselství směrem k singularitě." />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://belegcz.github.io/singularita/document.html" />
+  <meta property="og:locale" content="cs_CZ" />
+  <meta name="robots" content="index, follow" />
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -71,4 +80,3 @@
   </footer>
 </body>
 </html>
-
